--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="./imgs/LõiVaiBòMỹ.jpg" />
+              <img src="./imgs/LoiVaiBoMy.jpg" />
             </div>
             <div class="card-content">
               <p><b>Bò Mỹ - Lõi vai</b></p>
