--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <tr>
             <td>
               Âu cánh gà - <br />
-              Khúc trong của cánh gà
+              Khúc giữa của cánh gà
             </td>
             <td>89k / 1kg</td>
             <td>1 bịch 0.5kg hoặc 1kg</td>
@@ -444,7 +444,7 @@
               <p>
                 <b
                   >Âu cánh gà <br />
-                  Khúc trong của cánh gà</b
+                  Khúc giữa của cánh gà</b
                 >
               </p>
               <p class="teal-text text-accent-4">85k / 1kg</p>
