--- a/index.html
+++ b/index.html
@@ -131,13 +131,14 @@
             <td>1.2kg - 2.6kg / 1 con</td>
           </tr>
           <tr>
-            <td>Cá Saba (Nhật - Na Uy)</td>
-            <td>42k / 1kg</td>
-            <td>
-              0.8kg - 1.2kg / 1 con <br />
-              (Nhật hay Na Uy tuỳ vào<br />lô cá nào về trước - chất lượng tương
-              đương)
-            </td>
+            <td>Cá Saba - Nhật</td>
+            <td>45k / 1kg</td>
+            <td>0.8kg - 1.2kg / 1 con</td>
+          </tr>
+          <tr>
+            <td>Cá Saba - Na Uy</td>
+            <td>90k / 1kg</td>
+            <td>0.8kg - 1.2kg / 1 con</td>
           </tr>
           <tr>
             <td>Cá Ngừ</td>
@@ -374,11 +375,23 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
+              <img src="./imgs/CaSabaNhat.jpg" />
+            </div>
+            <div class="card-content">
+              <p><b>Cá Saba - Nhật</b></p>
+              <p class="teal-text text-accent-4">45k / 1kg</p>
+              <p>0.8kg - 1.2kg / 1 con</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
               <img src="./imgs/CaSaba.jpg" />
             </div>
             <div class="card-content">
-              <p><b>Cá Saba</b></p>
-              <p class="teal-text text-accent-4">42k / 1kg</p>
+              <p><b>Cá Saba - Na Uy</b></p>
+              <p class="teal-text text-accent-4">90k / 1kg</p>
               <p>0.8kg - 1.2kg / 1 con</p>
             </div>
           </div>
