--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           </tr>
           <tr>
             <td>Cá Hồi - Vây cá</td>
-            <td>70k / 1kg</td>
-            <td>Khách hàng yêu cầu số kg</td>
+            <td>80k / 1kg</td>
+            <td>1 bịch 1kg</td>
           </tr>
           <tr>
             <td>Cá Hồi - Đuôi cá</td>
@@ -331,8 +331,8 @@
             </div>
             <div class="card-content">
               <p><b>Vây cá hồi</b></p>
-              <p class="teal-text text-accent-4">70k / 1kg</p>
-              <p>Khách hàng yêu cầu số kg</p>
+              <p class="teal-text text-accent-4">80k / 1kg</p>
+              <td>1 bịch 1kg</td>
             </div>
           </div>
         </div>
