--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <p class="flow-text">🐔 Gà (Khúc giữa cánh gà)</p>
         <p class="flow-text">🥟 Ăn vặt (Bò / Cá / Tôm viên, Chạo cá Basa)</p>
         <p class="flow-text">---</p>
+        <p class="flow-text">Nguồn gốc sản phẩm: CÔNG TY TNHH THƯƠNG MẠI XUẤT NHẬP KHẨU QUÂN BẢO</p>
+        <p class="flow-text">---</p>
         <p class="flow-text">💥💥 Miễn phí ship nội khu 13E</p>
         <p class="flow-text">
           💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng
