--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="nav z-depth-0">
       <div class="section center">
-        <h4 class="center">🙋‍♂️ Kỳ - Zalo - 0818.411.598</h4>
+        <h4 class="center">🙋‍♂️ Kỳ - Zalo - 0813659939</h4>
         <p class="flow-text">🐮 Bò Mỹ (Lõi vai, Ba chỉ)</p>
         <p class="flow-text">🐟 Cá (Hồi, Trứng, Cam, Đối, Saba, Ngừ)</p>
         <p class="flow-text">🐔 Gà (Khúc giữa cánh gà)</p>
@@ -43,7 +43,7 @@
         <p class="flow-text">---</p>
         <p class="flow-text">Nguồn gốc sản phẩm: CÔNG TY TNHH THƯƠNG MẠI XUẤT NHẬP KHẨU QUÂN BẢO</p>
         <p class="flow-text">---</p>
-        <p class="flow-text">💥💥 Miễn phí ship nội khu 13E</p>
+        <p class="flow-text">💥💥 Miễn phí ship khu dân cư 13E, Conic</p>
         <p class="flow-text">
           💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng
         </p>
@@ -60,7 +60,7 @@
       <p>
         Nếu quý cô chú - anh chị có bất kỳ thắc mắc nào hãy họi ngay vào số
         <span class="teal-text text-accent-4"
-          ><b class="emphasize">0818.411.598</b></span
+          ><b class="emphasize">0813659939</b></span
         >
         hoặc liên hệ với em qua
         <span class="teal-text text-accent-4"
@@ -210,7 +210,7 @@
     <div class="section center container">
       <h3>🌠 Hình ảnh sản phẩm</h3>
       <h4>🐮 Bò Mỹ</h4>
-      <p class="teal-text text-accent-4">0818.411.598</p>
+      <p class="teal-text text-accent-4">0813659939</p>
       <div class="row">
         <div class="col s12 m6">
           <div class="card">
@@ -240,7 +240,7 @@
         </div>
       </div>
       <h4>🐟 Cá</h4>
-      <p class="teal-text text-accent-4">0818.411.598</p>
+      <p class="teal-text text-accent-4">0813659939</p>
       <div class="row">
         <div class="col s12 m6">
           <div class="card">
@@ -361,7 +361,7 @@
           </div>
         </div>
         <h4>🐔 Gà</h4>
-        <p class="teal-text text-accent-4">0818.411.598</p>
+        <p class="teal-text text-accent-4">0813659939</p>
         <div class="row">
           <div class="col s12 m6 push-m3">
             <div class="card">
@@ -378,7 +378,7 @@
           </div>
         </div>
         <h4>🥟 Ăn vặt</h4>
-        <p class="teal-text text-accent-4">0818.411.598</p>
+        <p class="teal-text text-accent-4">0813659939</p>
         <div class="row">
           <div class="col s12 m6">
             <div class="card">
@@ -437,7 +437,7 @@
     </div>
     <div class="nav z-depth-0">
       <div class="section center container">
-        <h4>Kỳ - Zalo - 0818.411.598</h4>
+        <h4>Kỳ - Zalo - 0813659939</h4>
         <p class="flow-text">
           ❤️ Rất hân hạnh được phục vụ quý cô chú - anh chị
         </p>
