--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       sizes="16x16"
     />
 
-    <title>Kỳ Con Cá</title>
+    <title>Thực phẩm nhập khẩu</title>
 
     <!-- Materialize -->
     <link
@@ -34,192 +34,27 @@
   </head>
   <body>
     <div class="nav z-depth-0">
-      <div class="section center">
-        <h4 class="center">🙋‍♂️ Kỳ - Zalo - 0813659939</h4>
-        <p class="flow-text">🐮 Bò Mỹ (Lõi vai, Ba chỉ)</p>
-        <p class="flow-text">🐟 Cá (Hồi, Trứng, Cam, Đối, Saba, Ngừ)</p>
-        <p class="flow-text">🐔 Gà (Khúc giữa cánh gà)</p>
-        <p class="flow-text">🥟 Ăn vặt (Bò / Cá / Tôm viên, Chạo cá Basa)</p>
-        <p class="flow-text">---</p>
-        <p class="flow-text">Nguồn gốc sản phẩm: CÔNG TY TNHH THƯƠNG MẠI XUẤT NHẬP KHẨU QUÂN BẢO</p>
-        <p class="flow-text">---</p>
-        <p class="flow-text">💥💥 Miễn phí ship khu dân cư 13E, Conic</p>
-        <p class="flow-text">
-          💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng
-        </p>
+      <div class="section center white-text">
+        <h5 class="flow-text">🙋‍♂️ Kỳ - Zalo - 0813.659.939 - Saigon Intela B - 703</h5>
+        <h5 class="flow-text">👉 Chuyên cung cấp sỉ và lẻ thịt cá đông lạnh</h5>
+        <h5 class="flow-text">🛳 Nguồn gốc: Nhập khẩu chất lượng cao từ Nhật, Nauy, Hà Lan, Pháp...</h5>
+        <h5 class="flow-text">🏠 Chịu trách nhiệm nhập khẩu: Công ty TNHH thương mại xuất nhập khẩu QUÂN BẢO</h5>
+        <h5 class="flow-text">🛵 Miễn phí ship khu dân cư 13E, Conic (Các khu vực khác tính phí theo km)</h5>
+        <h5 class="flow-text">💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng</h5>
       </div>
     </div>
     <div class="section center container">
-      <h5 class="welcome center teal accent-4">
-        ❤️ Kính chào quý cô chú - anh chị
-      </h5>
-      <p>
-        Bên dưới là <b class="emphasize">bảng thông tin giá</b> và dưới cùng là
-        <b class="emphasize">hình ảnh</b> của các loại sản phẩm
-      </p>
-      <p>
-        Nếu quý cô chú - anh chị có bất kỳ thắc mắc nào hãy họi ngay vào số
-        <span class="teal-text text-accent-4"
-          ><b class="emphasize">0813659939</b></span
-        >
-        hoặc liên hệ với em qua
-        <span class="teal-text text-accent-4"
-          ><b class="emphasize">Zalo</b></span
-        >
-      </p>
-    </div>
-    <div class="section center container">
-      <h3>💰 Bảng giá</h3>
-    </div>
-    <div class="section center container">
-      <h4>🐮 Bò Mỹ</h4>
-      <table class="striped">
-        <thead>
-          <tr>
-            <th>Bò</th>
-            <th>Giá</th>
-            <th>Mô tả</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lõi vai</td>
-            <td>370k / 1kg</td>
-            <td>1 bịch ~ 0.5kg</td>
-          </tr>
-          <tr>
-            <td>Ba chỉ</td>
-            <td>250k / 1kg</td>
-            <td>1 vỉ 0.5kg</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="section center container">
-      <h4>🐟 Cá</h4>
-      <table class="striped">
-        <thead>
-          <tr>
-            <th>Cá</th>
-            <th>Giá (kg)</th>
-            <th>Mô tả</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Cá Hồi - Đầu cá</td>
-            <td>50k / 1kg</td>
-            <td>0.4kg +</td>
-          </tr>
-          <tr>
-            <td>Cá Hồi - Cắt lát</td>
-            <td>320k / 1kg</td>
-            <td>1 bịch ~ 0.5kg</td>
-          </tr>
-          <tr>
-            <td>Cá Hồi - Vây cá</td>
-            <td>80k / 1kg</td>
-            <td>1 bịch 1kg</td>
-          </tr>
-          <tr>
-            <td>Cá Hồi - Đuôi cá</td>
-            <td>150k / 1kg</td>
-            <td>1 bịch ~ 0.5kg</td>
-          </tr>
-          <tr>
-            <td>Cá trứng Na Uy</td>
-            <td>55k / khay</td>
-            <td>1 khay 0.5kg</td>
-          </tr>
-          <tr>
-            <td>Cá Cam</td>
-            <td>75k / 1kg</td>
-            <td>0.8kg - 1.2kg / 1 con</td>
-          </tr>
-          <tr>
-            <td>Cá Đối</td>
-            <td>45k / 1kg</td>
-            <td>1kg - 3kg / 1 con</td>
-          </tr>
-          <tr>
-            <td>Cá Saba - Na Uy</td>
-            <td>90k / 1kg</td>
-            <td>0.4kg - 0.6kg / 1 con</td>
-          </tr>
-          <tr>
-            <td>Cá Ngừ - Thu ngừ</td>
-            <td>60k / 1kg</td>
-            <td>0.4kg - 0.6kg / 1 con</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="section center container">
-      <h4>🐔 Gà</h4>
-      <table class="striped">
-        <thead>
-          <tr>
-            <th>Gà</th>
-            <th>Giá</th>
-            <th>Mô tả</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Khúc giữa cánh gà</td>
-            <td>85k / 1kg</td>
-            <td>1 bịch 1kg</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="section center container">
-      <h4>🥟 Ăn vặt</h4>
-      <table class="striped">
-        <thead>
-          <tr>
-            <th>Ăn vặt</th>
-            <th>Giá</th>
-            <th>Mô tả</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Bò viên</td>
-            <td>15k</td>
-            <td>1 bịch 200grams</td>
-          </tr>
-          <tr>
-            <td>Cá viên</td>
-            <td>15k</td>
-            <td>1 bịch 200grams</td>
-          </tr>
-          <tr>
-            <td>Tôm viên</td>
-            <td>15k</td>
-            <td>1 bịch 200grams</td>
-          </tr>
-          <tr>
-            <td>Chạo cá Basa</td>
-            <td>18k</td>
-            <td>1 bịch 200grams</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="section center container">
-      <h3>🌠 Hình ảnh sản phẩm</h3>
-      <h4>🐮 Bò Mỹ</h4>
-      <p class="teal-text text-accent-4">0813659939</p>
+      <h4>🐮 Bò</h4>
+      <p class="teal-text text-accent-4">0813.659.939</p>
       <div class="row">
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
               <img src="./imgs/LoiVaiBoMy.jpg" />
             </div>
-            <div class="card-content">
+            <div class="card-content white-text">
               <p><b>Bò Mỹ - Lõi vai</b></p>
-              <p class="teal-text text-accent-4">370k / 1kg</p>
+              <p>370k / 1kg</p>
               <p>1 bịch ~ 0.5kg</p>
             </div>
             <div class="arrow-right"></div>
@@ -230,9 +65,9 @@
             <div class="card-image">
               <img src="./imgs/BaChiBoMy.jpg" />
             </div>
-            <div class="card-content">
+            <div class="card-content white-text">
               <p><b>Bò Mỹ - Ba chỉ</b></p>
-              <p class="teal-text text-accent-4">250k / 1kg</p>
+              <p>250k / 1kg</p>
               <p>1 vỉ 0.5kg</p>
             </div>
             <div class="arrow-right"></div>
@@ -240,16 +75,16 @@
         </div>
       </div>
       <h4>🐟 Cá</h4>
-      <p class="teal-text text-accent-4">0813659939</p>
+      <p class="teal-text text-accent-4">0813.659.939</p>
       <div class="row">
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
               <img src="./imgs/DauCaHoi.jpg" />
             </div>
-            <div class="card-content">
+            <div class="card-content white-text">
               <p><b>Đầu cá hồi</b></p>
-              <p class="teal-text text-accent-4">50k / 1kg</p>
+              <p>50k / 1kg</p>
               <p>0.4kg +</p>
             </div>
             <div class="arrow-right"></div>
@@ -260,9 +95,9 @@
             <div class="card-image">
               <img src="./imgs/CaHoiCatLat.jpg" />
             </div>
-            <div class="card-content">
+            <div class="card-content white-text">
               <p><b>Cá hồi cắt lát</b></p>
-              <p class="teal-text text-accent-4">320k / 1kg</p>
+              <p>320k / 1kg</p>
               <p>1 bịch ~ 0.5kg</p>
             </div>
             <div class="arrow-right"></div>
@@ -273,9 +108,9 @@
             <div class="card-image">
               <img src="./imgs/VayCaHoi.jpg" />
             </div>
-            <div class="card-content">
+            <div class="card-content white-text">
               <p><b>Vây cá hồi</b></p>
-              <p class="teal-text text-accent-4">80k / 1kg</p>
+              <p>80k / 1kg</p>
               <p>1 bịch 1kg</p>
             </div>
             <div class="arrow-right"></div>
@@ -286,9 +121,9 @@
               <div class="card-image">
                 <img src="./imgs/DuoiCaHoi.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Đuôi cá hồi</b></p>
-                <p class="teal-text text-accent-4">150k / 1kg</p>
+                <p>150k / 1kg</p>
                 <p>1 bịch ~ 0.5kg</p>
               </div>
               <div class="arrow-right"></div>
@@ -299,9 +134,9 @@
               <div class="card-image">
                 <img src="./imgs/CaTrungNauy.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Cá trứng Na Uy</b></p>
-                <p class="teal-text text-accent-4">55k / khay</p>
+                <p>55k / khay</p>
                 <p>1 khay 0.5kg</p>
               </div>
               <div class="arrow-right"></div>
@@ -312,9 +147,9 @@
               <div class="card-image">
                 <img src="./imgs/CaCam.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Cá Cam</b></p>
-                <p class="teal-text text-accent-4">75k / 1kg</p>
+                <p>75k / 1kg</p>
                 <p>0.8kg - 1.2kg</p>
               </div>
               <div class="arrow-right"></div>
@@ -325,9 +160,9 @@
               <div class="card-image">
                 <img src="./imgs/CaDoi.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Cá Đối</b></p>
-                <p class="teal-text text-accent-4">45 / 1kg</p>
+                <p>45 / 1kg</p>
                 <p>1kg - 3kg / 1 con</p>
               </div>
               <div class="arrow-right"></div>
@@ -338,9 +173,9 @@
               <div class="card-image">
                 <img src="./imgs/CaSaba.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Cá Saba - Na Uy</b></p>
-                <p class="teal-text text-accent-4">90k / 1kg</p>
+                <p>90k / 1kg</p>
                 <p>0.4kg - 0.6kg / 1 con</p>
               </div>
               <div class="arrow-right"></div>
@@ -351,9 +186,9 @@
               <div class="card-image">
                 <img src="./imgs/CaThuNgu.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Thu Ngừ</b></p>
-                <p class="teal-text text-accent-4">60k / 1kg</p>
+                <p>60k / 1kg</p>
                 <p>0.4kg - 0.6kg / 1 con</p>
               </div>
               <div class="arrow-right"></div>
@@ -361,16 +196,16 @@
           </div>
         </div>
         <h4>🐔 Gà</h4>
-        <p class="teal-text text-accent-4">0813659939</p>
+        <p class="teal-text text-accent-4">0813.659.939</p>
         <div class="row">
           <div class="col s12 m6 push-m3">
             <div class="card">
               <div class="card-image">
                 <img src="./imgs/AuCanhGa.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Khúc giữa cánh gà</b></p>
-                <p class="teal-text text-accent-4">85k / 1kg</p>
+                <p>80k / 1kg</p>
                 <p>1 bịch 1kg</p>
               </div>
               <div class="arrow-right"></div>
@@ -378,16 +213,16 @@
           </div>
         </div>
         <h4>🥟 Ăn vặt</h4>
-        <p class="teal-text text-accent-4">0813659939</p>
+        <p class="teal-text text-accent-4">0813.659.939</p>
         <div class="row">
           <div class="col s12 m6">
             <div class="card">
               <div class="card-image">
                 <img src="./imgs/BoVien.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Bò viên</b></p>
-                <p class="teal-text text-accent-4">15k</p>
+                <p>15k</p>
                 <p>1 bịch 200grams</p>
               </div>
               <div class="arrow-right"></div>
@@ -398,9 +233,9 @@
               <div class="card-image">
                 <img src="./imgs/CaVien.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Cá viên</b></p>
-                <p class="teal-text text-accent-4">15k</p>
+                <p>15k</p>
                 <p>1 bịch 200grams</p>
               </div>
               <div class="arrow-right"></div>
@@ -411,9 +246,9 @@
               <div class="card-image">
                 <img src="./imgs/TomVien.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Tôm viên</b></p>
-                <p class="teal-text text-accent-4">15k</p>
+                <p>15k</p>
                 <p>1 bịch 200grams</p>
               </div>
               <div class="arrow-right"></div>
@@ -424,9 +259,9 @@
               <div class="card-image">
                 <img src="./imgs/ChaoCaBasa.jpg" />
               </div>
-              <div class="card-content">
+              <div class="card-content white-text">
                 <p><b>Chạo cá Basa</b></p>
-                <p class="teal-text text-accent-4">18k</p>
+                <p>18k</p>
                 <p>1 bịch 200grams</p>
               </div>
               <div class="arrow-right"></div>
@@ -437,12 +272,7 @@
     </div>
     <div class="nav z-depth-0">
       <div class="section center container">
-        <h4>Kỳ - Zalo - 0813659939</h4>
-        <p class="flow-text">
-          ❤️ Rất hân hạnh được phục vụ quý cô chú - anh chị
-        </p>
-        <p>Trần Nhật Kỳ - 14/02/2002</p>
-        <p>Happy Coding 😁</p>
+        <p class="flow-text white-text">❤️ Rất hạnh phúc khi được mang những sản phẩm chất lượng đến với quý cô chú - anh chị</p>
       </div>
     </div>
   </body>
