--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
     <div class="nav z-depth-0">
       <div class="section center white-text">
         <h5 class="flow-text">🙋‍♂️ Kỳ - Zalo - 0813.659.939 - Saigon Intela B - 703</h5>
-        <h5 class="flow-text">👉 Chuyên cung cấp sỉ và lẻ thịt cá đông lạnh</h5>
+        <h5 class="flow-text">👉 CHUYÊN CUNG CẤP SỈ VÀ LẺ THỊT CÁ ĐÔNG LẠNH</h5>
         <h5 class="flow-text">🛳 Nguồn gốc: Nhập khẩu chất lượng cao từ Nhật, Nauy, Hà Lan, Pháp...</h5>
-        <h5 class="flow-text">🏠 Chịu trách nhiệm nhập khẩu: Công ty TNHH thương mại xuất nhập khẩu QUÂN BẢO</h5>
         <h5 class="flow-text">🛵 Miễn phí ship khu dân cư 13E, Conic (Các khu vực khác tính phí theo km)</h5>
-        <h5 class="flow-text">💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng</h5>
       </div>
     </div>
     <div class="section center container">
@@ -271,8 +269,10 @@
       </div>
     </div>
     <div class="nav z-depth-0">
-      <div class="section center container">
-        <p class="flow-text white-text">❤️ Rất hạnh phúc khi được mang những sản phẩm chất lượng đến với quý cô chú - anh chị</p>
+      <div class="section center container white-text">
+        <h5 class="flow-text">🏠 Chịu trách nhiệm nhập khẩu: Công ty TNHH thương mại xuất nhập khẩu QUÂN BẢO</h5>
+        <h5 class="flow-text">💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng</h5>
+        <p class="flow-text">❤️ Rất hạnh phúc khi được mang những sản phẩm chất lượng đến với quý cô chú - anh chị</p>
       </div>
     </div>
   </body>
