--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
     </div>
     <div class="section center container">
+      <!-- <a class="waves-effect waves-light btn"><i class="material-icons right price-icon">arrow_drop_down</i>💰 Bảng giá</a> -->
       <h4>🐮 Bò</h4>
       <p class="teal-text text-accent-4">0813.659.939</p>
       <div class="row">
@@ -187,6 +188,32 @@
               <div class="card-content white-text">
                 <p><b>Thu Ngừ</b></p>
                 <p>60k / 1kg</p>
+                <p>0.4 - 0.6kg / 1 con</p>
+              </div>
+              <div class="arrow-right"></div>
+            </div>
+          </div>
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/CaNguBo.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Ngừ Bò</b></p>
+                <p>65k / 1kg</p>
+                <p>1.2kg - 2kg / 1 con</p>
+              </div>
+              <div class="arrow-right"></div>
+            </div>
+          </div>
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/CaNguBong.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Ngừ Bông</b></p>
+                <p>40k / 1kg</p>
                 <p>0.4kg - 0.6kg / 1 con</p>
               </div>
               <div class="arrow-right"></div>
