--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
               </div>
               <div class="card-content white-text">
                 <p><b>Thu Ngừ</b></p>
-                <p>60k / 1kg</p>
-                <p>0.4 - 0.6kg / 1 con</p>
+                <p>60k / 1kg (0.4 - 0.6kg / 1 con)</p>
+                <p>75k / 1kg (1 - 1.5kg / 1 con)</p>
               </div>
               <div class="arrow-right"></div>
             </div>
