--- a/index.html
+++ b/index.html
@@ -219,6 +219,19 @@
               <div class="arrow-right"></div>
             </div>
           </div>
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/CaNuc.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Cá Nục</b></p>
+                <p>45k / 1kg</p>
+                <p>0.4kg - 0.6kg / 1 con</p>
+              </div>
+              <div class="arrow-right"></div>
+            </div>
+          </div>
         </div>
         <h4>🐔 Gà</h4>
         <p class="teal-text text-accent-4">0813.659.939</p>
