--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
               <img src="./imgs/DauCaHoi.jpg" />
             </div>
             <div class="card-content white-text">
-              <p><b>Đầu cá hồi</b></p>
-              <p>50k / 1kg</p>
-              <p>0.4kg +</p>
+              <p><b>Đầu Hồi Estonia</b></p>
+              <p>65k / 1kg</p>
+              <p>0.4kg - 0.6kg</p>
             </div>
             <div class="arrow-right"></div>
           </div>
