--- a/index.html
+++ b/index.html
@@ -174,7 +174,20 @@
               </div>
               <div class="card-content white-text">
                 <p><b>Cá Saba - Na Uy</b></p>
-                <p>90k / 1kg</p>
+                <p>100k / 1kg</p>
+                <p>0.4kg - 0.6kg / 1 con</p>
+              </div>
+              <div class="arrow-right"></div>
+            </div>
+          </div>
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/CaSabaNhat.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Cá Saba - Nhật</b></p>
+                <p>50k / 1kg</p>
                 <p>0.4kg - 0.6kg / 1 con</p>
               </div>
               <div class="arrow-right"></div>
@@ -212,14 +225,14 @@
                 <img src="./imgs/CaNguBong.jpg" />
               </div>
               <div class="card-content white-text">
-                <p><b>Ngừ Bông</b></p>
+                <p><b>Ngừ Hoa</b></p>
                 <p>40k / 1kg</p>
                 <p>0.4kg - 0.6kg / 1 con</p>
               </div>
               <div class="arrow-right"></div>
             </div>
           </div>
-          <div class="col s12 m6">
+          <div class="col s12 m6 pull-m3">
             <div class="card">
               <div class="card-image">
                 <img src="./imgs/CaNuc.jpg" />
