--- a/index.html
+++ b/index.html
@@ -43,6 +43,192 @@
     </div>
     <div class="section center container">
       <!-- <a class="waves-effect waves-light btn"><i class="material-icons right price-icon">arrow_drop_down</i>💰 Bảng giá</a> -->
+      <h4>🐟 Cá</h4>
+      <p class="teal-text text-accent-4">0813.659.939</p>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaDoi.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá Đối</b></p>
+              <p>60k / 1kg</p>
+              <p>1kg - 3kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/CaCam.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Cá Cam</b></p>
+                <p>75k / 1kg</p>
+                <p>0.8kg - 1.2kg</p>
+              </div>
+              <div class="arrow-right"></div>
+            </div>
+          </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/DauCaHoi.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Đầu Hồi Estonia</b></p>
+              <p>65k / 1kg</p>
+              <p>0.4kg - 0.6kg</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaHoiCatLat.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá hồi cắt lát</b></p>
+              <p>320k / 1kg</p>
+              <p>1 bịch ~ 0.5kg</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaTrungNauy.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá trứng Na Uy</b></p>
+              <p>55k / khay</p>
+              <p>1 khay 0.5kg</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/VayCaHoi.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Vây cá hồi</b></p>
+              <p>90k / 1kg</p>
+              <p>1 bịch 1kg</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/DuoiCaHoi.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Đuôi cá hồi</b></p>
+              <p>150k / 1kg</p>
+              <p>1 bịch ~ 0.5kg</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaSaba.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá Saba - Na Uy</b></p>
+              <p>100k / 1kg</p>
+              <p>0.4kg - 0.6kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaSabaNhat.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá Saba - Nhật</b></p>
+              <p>50k / 1kg</p>
+              <p>0.4kg - 0.6kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaThuNgu.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Thu Ngừ</b></p>
+              <p>60k / 1kg (0.4 - 0.6kg / 1 con)</p>
+              <p>75k / 1kg (1 - 1.5kg / 1 con)</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaNguBo.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Ngừ Bò</b></p>
+              <p>65k / 1kg</p>
+              <p>1.2kg - 2kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaNguBong.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Ngừ Hoa</b></p>
+              <p>40k / 1kg</p>
+              <p>0.4kg - 0.6kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaNuc.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá Nục</b></p>
+              <p>45k / 1kg</p>
+              <p>0.4kg - 0.6kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6 push-m3">
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaNuong.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá Cam nướng giấy bạc</b></p>
+              <p>90k - 120k / 1 con</p>
+              <p>Khoảng 1 kg / 1con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+      </div>
       <h4>🐮 Bò</h4>
       <p class="teal-text text-accent-4">0813.659.939</p>
       <div class="row">
@@ -73,179 +259,6 @@
           </div>
         </div>
       </div>
-      <h4>🐟 Cá</h4>
-      <p class="teal-text text-accent-4">0813.659.939</p>
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/DauCaHoi.jpg" />
-            </div>
-            <div class="card-content white-text">
-              <p><b>Đầu Hồi Estonia</b></p>
-              <p>65k / 1kg</p>
-              <p>0.4kg - 0.6kg</p>
-            </div>
-            <div class="arrow-right"></div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/CaHoiCatLat.jpg" />
-            </div>
-            <div class="card-content white-text">
-              <p><b>Cá hồi cắt lát</b></p>
-              <p>320k / 1kg</p>
-              <p>1 bịch ~ 0.5kg</p>
-            </div>
-            <div class="arrow-right"></div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/VayCaHoi.jpg" />
-            </div>
-            <div class="card-content white-text">
-              <p><b>Vây cá hồi</b></p>
-              <p>90k / 1kg</p>
-              <p>1 bịch 1kg</p>
-            </div>
-            <div class="arrow-right"></div>
-          </div>
-        </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/DuoiCaHoi.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Đuôi cá hồi</b></p>
-                <p>150k / 1kg</p>
-                <p>1 bịch ~ 0.5kg</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaTrungNauy.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá trứng Na Uy</b></p>
-                <p>55k / khay</p>
-                <p>1 khay 0.5kg</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaCam.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá Cam</b></p>
-                <p>75k / 1kg</p>
-                <p>0.8kg - 1.2kg</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaDoi.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá Đối</b></p>
-                <p>60k / 1kg</p>
-                <p>1kg - 3kg / 1 con</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaSaba.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá Saba - Na Uy</b></p>
-                <p>100k / 1kg</p>
-                <p>0.4kg - 0.6kg / 1 con</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaSabaNhat.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá Saba - Nhật</b></p>
-                <p>50k / 1kg</p>
-                <p>0.4kg - 0.6kg / 1 con</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaThuNgu.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Thu Ngừ</b></p>
-                <p>60k / 1kg (0.4 - 0.6kg / 1 con)</p>
-                <p>75k / 1kg (1 - 1.5kg / 1 con)</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaNguBo.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Ngừ Bò</b></p>
-                <p>65k / 1kg</p>
-                <p>1.2kg - 2kg / 1 con</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaNguBong.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Ngừ Hoa</b></p>
-                <p>40k / 1kg</p>
-                <p>0.4kg - 0.6kg / 1 con</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-          <div class="col s12 m6 pull-m3">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaNuc.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá Nục</b></p>
-                <p>45k / 1kg</p>
-                <p>0.4kg - 0.6kg / 1 con</p>
-              </div>
-              <div class="arrow-right"></div>
-            </div>
-          </div>
-        </div>
         <h4>🐔 Gà</h4>
         <p class="teal-text text-accent-4">0813.659.939</p>
         <div class="row">
@@ -274,7 +287,7 @@
               <div class="card-content white-text">
                 <p><b>Bò viên</b></p>
                 <p>15k</p>
-                <p>1 bịch 200grams</p>
+                <p>200g / 1 bịch</p>
               </div>
               <div class="arrow-right"></div>
             </div>
@@ -287,7 +300,7 @@
               <div class="card-content white-text">
                 <p><b>Cá viên</b></p>
                 <p>15k</p>
-                <p>1 bịch 200grams</p>
+                <p>200g / 1 bịch</p>
               </div>
               <div class="arrow-right"></div>
             </div>
@@ -300,7 +313,7 @@
               <div class="card-content white-text">
                 <p><b>Tôm viên</b></p>
                 <p>15k</p>
-                <p>1 bịch 200grams</p>
+                <p>200g / 1 bịch</p>
               </div>
               <div class="arrow-right"></div>
             </div>
@@ -313,7 +326,7 @@
               <div class="card-content white-text">
                 <p><b>Chạo cá Basa</b></p>
                 <p>18k</p>
-                <p>1 bịch 200grams</p>
+                <p>200g / 1 bịch</p>
               </div>
               <div class="arrow-right"></div>
             </div>
