--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="./imgs/CaThuNgu.jpg" />
+              <img src="./imgs/ThuNgu.jpg" />
             </div>
             <div class="card-content white-text">
               <p><b>Thu Ngừ</b></p>
