--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
               <img src="./imgs/CaNguBong.jpg" />
             </div>
             <div class="card-content white-text">
-              <p><b>Ngừ Hoa</b></p>
-              <p>40k / 1kg</p>
+              <p><b>Ngừ Bông / Ngừ Hoa</b></p>
+              <p>50k / 1kg</p>
               <p>0.4kg - 0.6kg / 1 con</p>
             </div>
             <div class="arrow-right"></div>
