--- a/index.html
+++ b/index.html
@@ -35,10 +35,17 @@
   <body>
     <div class="nav z-depth-0">
       <div class="section center white-text">
-        <h5 class="flow-text">🙋‍♂️ Kỳ - Zalo - 0813.659.939 - Saigon Intela B - 703</h5>
+        <h5 class="flow-text">
+          🙋‍♂️ Kỳ - Zalo - 0813.659.939 - Saigon Intela B - 703
+        </h5>
         <h5 class="flow-text">👉 CHUYÊN CUNG CẤP SỈ VÀ LẺ THỊT CÁ ĐÔNG LẠNH</h5>
-        <h5 class="flow-text">🛳 Nguồn gốc: Nhập khẩu chất lượng cao từ Nhật, Nauy, Hà Lan, Pháp...</h5>
-        <h5 class="flow-text">🛵 Miễn phí ship khu dân cư 13E, Conic (Các khu vực khác tính phí theo km)</h5>
+        <h5 class="flow-text">
+          🛳 Nguồn gốc: Nhập khẩu chất lượng cao từ Nhật, Nauy, Hà Lan, Pháp...
+        </h5>
+        <h5 class="flow-text">
+          🛵 Miễn phí ship khu dân cư 13E, Conic (Các khu vực khác tính phí theo
+          km)
+        </h5>
       </div>
     </div>
     <div class="section center container">
@@ -60,18 +67,18 @@
           </div>
         </div>
         <div class="col s12 m6">
-            <div class="card">
-              <div class="card-image">
-                <img src="./imgs/CaCam.jpg" />
-              </div>
-              <div class="card-content white-text">
-                <p><b>Cá Cam</b></p>
-                <p>75k / 1kg</p>
-                <p>0.8kg - 1.2kg</p>
-              </div>
-              <div class="arrow-right"></div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./imgs/CaCam.jpg" />
             </div>
+            <div class="card-content white-text">
+              <p><b>Cá Cam</b></p>
+              <p>75k / 1kg</p>
+              <p>0.8kg - 1.2kg</p>
+            </div>
+            <div class="arrow-right"></div>
           </div>
+        </div>
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
@@ -143,19 +150,6 @@
               <img src="./imgs/CaSaba.jpg" />
             </div>
             <div class="card-content white-text">
-              <p><b>Cá Saba - Na Uy</b></p>
-              <p>100k / 1kg</p>
-              <p>0.4kg - 0.6kg / 1 con</p>
-            </div>
-            <div class="arrow-right"></div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/CaSabaNhat.jpg" />
-            </div>
-            <div class="card-content white-text">
               <p><b>Cá Saba - Nhật</b></p>
               <p>50k / 1kg</p>
               <p>0.4kg - 0.6kg / 1 con</p>
@@ -215,50 +209,37 @@
             <div class="arrow-right"></div>
           </div>
         </div>
-        <div class="col s12 m6 push-m3">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/CaNuong.jpg" />
+
+        <h4>🐮 Bò</h4>
+        <p class="teal-text text-accent-4">0813.659.939</p>
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/LoiVaiBoMy.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Bò Mỹ - Lõi vai</b></p>
+                <p>180k / 0.5kg</p>
+                <p>1 bịch ~ 0.5kg</p>
+              </div>
+              <div class="arrow-right"></div>
             </div>
-            <div class="card-content white-text">
-              <p><b>Cá Cam nướng giấy bạc</b></p>
-              <p>90k - 120k / 1 con</p>
-              <p>Khoảng 1 kg / 1con</p>
+          </div>
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="./imgs/BaChiBoMy.jpg" />
+              </div>
+              <div class="card-content white-text">
+                <p><b>Bò Mỹ - Ba chỉ</b></p>
+                <p>120k / 0.5kg</p>
+                <p>1 vỉ 0.5kg</p>
+              </div>
+              <div class="arrow-right"></div>
             </div>
-            <div class="arrow-right"></div>
           </div>
         </div>
-      </div>
-      <h4>🐮 Bò</h4>
-      <p class="teal-text text-accent-4">0813.659.939</p>
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/LoiVaiBoMy.jpg" />
-            </div>
-            <div class="card-content white-text">
-              <p><b>Bò Mỹ - Lõi vai</b></p>
-              <p>180k / 0.5kg</p>
-              <p>1 bịch ~ 0.5kg</p>
-            </div>
-            <div class="arrow-right"></div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="./imgs/BaChiBoMy.jpg" />
-            </div>
-            <div class="card-content white-text">
-              <p><b>Bò Mỹ - Ba chỉ</b></p>
-              <p>120k / 0.5kg</p>
-              <p>1 vỉ 0.5kg</p>
-            </div>
-            <div class="arrow-right"></div>
-          </div>
-        </div>
-      </div>
         <h4>🐔 Gà</h4>
         <p class="teal-text text-accent-4">0813.659.939</p>
         <div class="row">
@@ -336,9 +317,17 @@
     </div>
     <div class="nav z-depth-0">
       <div class="section center container white-text">
-        <h5 class="flow-text">🏠 Chịu trách nhiệm nhập khẩu: Công ty TNHH thương mại xuất nhập khẩu QUÂN BẢO</h5>
-        <h5 class="flow-text">💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng</h5>
-        <p class="flow-text">❤️ Rất hạnh phúc khi được mang những sản phẩm chất lượng đến với quý cô chú - anh chị</p>
+        <h5 class="flow-text">
+          🏠 Chịu trách nhiệm nhập khẩu: Công ty TNHH thương mại xuất nhập khẩu
+          QUÂN BẢO
+        </h5>
+        <h5 class="flow-text">
+          💰 Thanh toán qua thẻ hoặc thanh toán trực tiếp khi nhận hàng
+        </h5>
+        <p class="flow-text">
+          ❤️ Rất hạnh phúc khi được mang những sản phẩm chất lượng đến với quý
+          cô chú - anh chị
+        </p>
       </div>
     </div>
   </body>
