--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
+              <img src="./imgs/SabaNauy.jpg" />
+            </div>
+            <div class="card-content white-text">
+              <p><b>Cá Saba - Nauy</b></p>
+              <p>90k / 1kg</p>
+              <p>0.4kg - 0.6kg / 1 con</p>
+            </div>
+            <div class="arrow-right"></div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
               <img src="./imgs/CaSaba.jpg" />
             </div>
             <div class="card-content white-text">
